--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-web": "~0.13.12",
     "react-native-canvas": "0.1.37",
-    "react-native-webview": "11.3.1"
+    "react-native-webview": "11.3.1",
+    "react-native-svg": "4.5.0",
+    "react-native-svg-transformer": "0.14.3",
+    "react-native-expo-viewport-units": "0.0.8"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
