--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "react-native-web": "~0.13.12",
     "react-native-canvas": "0.1.37",
     "react-native-webview": "11.3.1",
-    "react-native-svg": "4.5.0",
     "react-native-svg-transformer": "0.14.3",
-    "react-native-expo-viewport-units": "0.0.8"
+    "react-native-expo-viewport-units": "0.0.8",
+    "react-native-svg": "12.1.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
