--- a/package.json
+++ b/package.json
@@ -18,7 +18,15 @@
     "react-native-webview": "11.3.1",
     "react-native-svg-transformer": "0.14.3",
     "react-native-expo-viewport-units": "0.0.8",
-    "react-native-svg": "12.1.0"
+    "react-native-svg": "12.1.0",
+    "react-native-three-step-bottom-drawer": "1.0.2",
+    "@react-navigation/stack": "5.14.4",
+    "react-native-reanimated": "2.1.0",
+    "react-native-gesture-handler": "1.10.3",
+    "react-native-screens": "3.0.0",
+    "react-native-safe-area-context": "3.2.0",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/native": "5.9.4"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
