bottom drawer not working

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-screens": "3.0.0",
     "react-native-safe-area-context": "3.2.0",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/native": "5.9.4"
+    "@react-navigation/native": "5.9.4",
+    "react-native-modalbox": "2.0.2"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
