--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react-native-safe-area-context": "3.2.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "5.9.4",
-    "react-native-modalbox": "2.0.2"
+    "react-native-modalbox": "2.0.2",
+    "react-native-elements": "3.3.2",
+    "expo-camera": "4.0.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
