--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "@react-navigation/native": "5.9.4",
     "react-native-modalbox": "2.0.2",
     "react-native-elements": "3.3.2",
-    "expo-camera": "4.0.0"
+    "expo-camera": "4.0.0",
+    "react-native-walkthrough-tooltip": "1.2.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
