--- a/package.json
+++ b/package.json
@@ -8,33 +8,34 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/native": "5.9.4",
+    "@react-navigation/stack": "5.14.4",
     "expo": "~40.0.0",
+    "expo-camera": "4.0.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-web": "~0.13.12",
     "react-native-canvas": "0.1.37",
-    "react-native-webview": "11.3.1",
-    "react-native-svg-transformer": "0.14.3",
-    "react-native-expo-viewport-units": "0.0.8",
-    "react-native-svg": "12.1.0",
-    "react-native-three-step-bottom-drawer": "1.0.2",
-    "@react-navigation/stack": "5.14.4",
-    "react-native-reanimated": "2.1.0",
-    "react-native-gesture-handler": "1.10.3",
-    "react-native-screens": "3.0.0",
-    "react-native-safe-area-context": "3.2.0",
-    "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/native": "5.9.4",
-    "react-native-modalbox": "2.0.2",
     "react-native-elements": "3.3.2",
-    "expo-camera": "4.0.0",
+    "react-native-expo-viewport-units": "0.0.8",
+    "react-native-gesture-handler": "1.10.3",
+    "react-native-modalbox": "2.0.2",
+    "react-native-popover-view": "4.0.0",
+    "react-native-reanimated": "2.1.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "3.0.0",
+    "react-native-svg": "12.1.0",
+    "react-native-svg-transformer": "0.14.3",
+    "react-native-three-step-bottom-drawer": "1.0.2",
     "react-native-walkthrough-tooltip": "1.2.0",
-    "react-native-popover-view": "4.0.0"
+    "react-native-web": "~0.13.12",
+    "react-native-webview": "11.3.1"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0"
+    "@babel/core": "~7.9.0",
+    "@expo/webpack-config": "^0.12.68"
   },
   "private": true
 }
